# SmartChunk

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  chunks.json  output.json  pyproject.toml  test_edge_cases.md  test_long.txt
.github/workflows/: ci.yml  publish-testpypi.yml
langchain/: compare_langchain.py
src/: __init__.py  cli.py
src/smartchunk/: __init__.py  chunker.py  cli.py  fetcher.py  parsers.py  utils.py
tests/: conftest.py  test_chunker.py  test_cli.py  test_parsers.py
