[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartchunk"
version = "0.1.0"
description = "Structure-aware semantic chunking for RAG/LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Team Metamorph" }]
keywords = ["RAG","chunking","semantic","NLP","LLM"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Text Processing :: Linguistic",
]

dependencies = [
  "rich>=13.7",
  "typer>=0.12",
  # optional:
  # "tiktoken>=0.7"
]

[project.scripts]
smartchunk = "smartchunk.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
