[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartchunk"
version = "0.1.1"
description = "Structure-aware semantic chunking for RAG/LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Team Metamorph" }]
keywords = ["RAG","chunking","semantic","NLP","LLM"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Text Processing :: Linguistic",
]

dependencies = [
  "rich>=13.7",
  "typer[all]>=0.12", # Using [all] for better optional features
  "tiktoken>=0.7"     # Added tiktoken as it is a core dependency
]

[project.scripts]
# This now correctly points to the 'app' object in your cli.py
smartchunk = "smartchunk.cli:app"

# --- Configuration for setuptools to find your package in the 'src' directory ---
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

