[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartchunk"
version = "0.1.2"
description = "Structure-aware semantic chunking for RAG/LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Team Metamorph" }]
keywords = ["RAG","chunking","semantic","NLP","LLM"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Text Processing :: Linguistic",
]

dependencies = [
  "rich>=13.7",
  "typer[all]>=0.12", # Using [all] for better optional features
  "markdown-it-py>=3.0",
  "beautifulsoup4>=4.12",
  "requests>=2.26",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "shellingham>=1.5",
  "sentence-transformers>=2.7",
]

[project.optional-dependencies]
tokenizer = ["tiktoken>=0.7"]

[project.scripts]
# This now correctly points to the 'app' object in your cli.py
smartchunk = "smartchunk.cli:app"

# --- Configuration for setuptools to find your package in the 'src' directory ---
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"smartchunk" = ["py.typed"]

